# edu-crew-1

./: .gitignore  setup.py  test_hubspot_post.py
edu_flow/: README.md  pyproject.toml
edu_flow2/: .gitignore  README.md  app.py  crewai_flow.html  pyproject.toml
edu_flow2/src/edu_flow2/: app.py  config.py  llm_config.py  main.py  other_file.py  test_hubspot_post.py
edu_flow2/src/edu_flow2/crews/edu_content_writer2/: edu_content_writer2_crew.py
edu_flow2/src/edu_flow2/crews/edu_content_writer2/config/: agents.yaml  tasks.yaml
edu_flow2/src/edu_flow2/crews/edu_research2/: edu_research2_crew.py
edu_flow2/src/edu_flow2/crews/edu_research2/config/: agents.yaml  tasks.yaml
edu_flow2/src/edu_flow2/tools/: custom_tool.py
edu_flow2/static/css/: styles.css
edu_flow2/static/js/: main.js
edu_flow2/templates/: index.html
src/: main.py
